fix: avoid overflow

--- a/packages/components/src/components/dropdown-select/dropdown-select.css
+++ b/packages/components/src/components/dropdown-select/dropdown-select.css
@@ -96,6 +96,11 @@
   color: var(--color);
 }
 
+[part='combobox-value']{
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 [part~='select']:not([part~='disabled'])
   [part='combobox']:hover
   ~ [part='icon'] {
